# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Make_VisualStudio2022.bat  README.md
GameEngineCore/: CMakeLists.txt
GameEngineCore/includes/: Application.hpp  Event.hpp  Log.hpp
GameEngineCore/src/: Application.cpp  Window.cpp  Window.hpp
GameEngineCore/src/Rendering/: ElementBuffer.cpp  ElementBuffer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
GameEngineEditor/: CMakeLists.txt
GameEngineEditor/src/: main.cpp
